--- a/template/index.html
+++ b/template/index.html
@@ -12,9 +12,51 @@
             box-sizing: border-box;
         }
 
+        :root {
+            --primary-color: #494747;
+            --secondary-color: #040404;
+            --font-primary: sans-serif;
+            --font-large: 3rem;
+            --font-medium: 1.5rem;
+            --font-small: 0.75rem;
+            --font-bold: 700;
+            --font-light: lighter;
+        }
+
+        /* utilities */
+        .font-large {
+            font-size: var(--font-large);
+        }
+
+
+        .font-medium {
+            font-size: var(--font-medium);
+        }
+
+        .font-small {
+            font-size: var(--font-small);
+        }
+
+        .font-bold {
+            font-weight: var(--font-bold);
+        }
+
+        .font-light {
+            font-weight: var(--font-light);
+        }
+
+        .line-div {
+            height: 1px;
+            background-color: black;
+            width: auto;
+        }
+
+
         body {
             display: flex;
             justify-content: space-between;
+            font-family: var(--font-primary);
+            height: 1050px;
         }
 
         body::before {
@@ -22,7 +64,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            height: 20vh;
+            height: 13rem;
             width: 100vw;
             z-index: -1;
             opacity: 0.5;
@@ -31,46 +73,203 @@
 
         .container {
             display: flex;
+            width: 100vw;
         }
 
         .div1 {
-            background-color: #404040;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: var(--primary-color);
             color: white;
-            height: 100vh;
-            width: 20vw;
-            padding: 2rem;
+            width: 15rem;
+            padding: 1rem;
+            margin: 0 0 0 50px;
+            gap: 10px;
+            text-align: center;
         }
 
         .div2 {
-            padding: 2rem;
-            /* background-color: green; */
+            padding: 0 3rem;
+            display: flex;
+            flex-direction: column;
+            width: 70vw;
+            gap: 1rem;
+        }
+
+        .name {
+            padding: 7rem 0 5rem;
+            font-family: sans-serif;
+        }
+
+        .about {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .skills {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem;
+            background-color: #f5f5f5;
+        }
+
+        .skill-list {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .skill-item {
+            background-color: #ddd;
+            padding: 0.5rem;
+            border-radius: 5px;
+        }
+
+        .education {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem;
+            height: 250px;
+        }
+
+        .education-list {
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .education-item {
+            /* padding: 0.5rem; */
+            border-radius: 5px;
+        }
+
+        .qualifications {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem;
+            height: 250px;
+        }
+
+        .qualification-list {
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .qualification-item {
+            border-radius: 5px;
+        }
+
+        .contacts {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem;
+            height: 250px;
+        }
+
+        .contact-list {
+            display: flex;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .contact-item {
+            border-radius: 5px;
+        }
+
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            overflow: hidden;
+            border-radius: 50%;
+        }
+
+        .profile-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .work-history {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding-top: 1rem;
+        }
+
+        .work-item {
+            border-radius: 5px;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="div1">
-            <div class="links">
 
-                {{#each contactLinks}}
-                <li>{{this}} </li>
-                {{/each}}
+        <div class="div1">
+            <div class="profile-photo">
+                <img src="https://assetsio.reedpopcdn.com/amspm-poster-cropped.jpg?width=1200&height=630&fit=crop&enable=upscale&auto=webp"
+                    alt="Profile Photo">
+            </div>
+            <div class="contacts">
+                <h2>Contact</h2>
+                <div class="contact-list">
+                    <div class="contact-item">{{email}}</div>
+                    <div class="contact-item">{{phone}}</div>
+                    <div class="contact-item">{{address}}</div>
+                </div>
             </div>
             <div class="qualifications">
-                {{#each qualifications}}
-                <li>{{this}} </li>
-                {{/each}}
+                <h2>Achievements</h2>
+                <div class="qualification-list">
+                    {{#each achievements}}
+                    <div class="qualification-item">{{this}}</div>
+                    {{/each}}
+                </div>
             </div>
             <div class="education">
-                {{#each education}}
-                <li>{{this}} </li>
-                {{/each}}
+                <h2>Education</h2>
+                <div class="education-list">
+                    {{#each education}}
+                    <div class="education-item">{{this}}</div>
+                    {{/each}}
+                </div>
             </div>
         </div>
         <div class="div2">
+            <div class="font-large name">
+                <p>{{name}}</p>
+            </div>
+            <div class="about">
+                <p class="font-medium font-bold">About me</p>
+                <p>{{about}}</p>
+            </div>
+            <div class="line-div"></div>
+            <div class="skills">
+                <h2>Skills</h2>
+                <div class="skill-list">
+                    {{#each skills}}
+                    <div class="skill-item">{{this}}</div>
+                    {{/each}}
+                </div>
+                <div class="work-history">
+                    {{#each work}}
+                    <div class="work-item">
+                        <h3>{{this.position}}</h3>
+                        <p>{{this.company}}</p>
+                        <p>{{this.years}}</p>
+                    </div>
+                    {{/each}}
 
-            <h1>{{name}}</h1>
+                </div>
+            </div>
         </div>
     </div>
 
