--- a/template/index.html
+++ b/template/index.html
@@ -16,9 +16,9 @@
             --primary-color: #494747;
             --secondary-color: #040404;
             --font-primary: sans-serif;
-            --font-large: 3rem;
-            --font-medium: 1.5rem;
-            --font-small: 0.75rem;
+            --font-large: 2.5rem;
+            --font-medium: 1.25rem;
+            --font-small: 0.85rem;
             --font-bold: 700;
             --font-light: lighter;
         }
@@ -45,7 +45,7 @@
             font-weight: var(--font-light);
         }
 
-        .line-div {
+        .black-div {
             height: 1px;
             background-color: black;
             width: auto;
@@ -62,13 +62,19 @@
         body::before {
             content: "";
             position: absolute;
-            top: 0;
+            top: 26px;
             left: 0;
-            height: 13rem;
+            height: 10rem;
             width: 100vw;
             z-index: -1;
             opacity: 0.5;
             background-color: lightpink;
+        }
+
+        .white-div {
+            background-color: white;
+            height: 2px;
+            width: 100%;
         }
 
         .container {
@@ -80,17 +86,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
             background-color: var(--primary-color);
             color: white;
-            width: 15rem;
+            width: 13rem;
             padding: 1rem;
-            margin: 0 0 0 50px;
+            margin: 0 0 0 40px;
             gap: 10px;
-            text-align: center;
         }
 
         .div2 {
-            padding: 0 3rem;
+            padding: 0 2rem;
             display: flex;
             flex-direction: column;
             width: 70vw;
@@ -98,7 +104,7 @@
         }
 
         .name {
-            padding: 7rem 0 5rem;
+            padding: 5rem 0;
             font-family: sans-serif;
         }
 
@@ -112,8 +118,10 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
-            background-color: #f5f5f5;
+            justify-content: center;
+            height: 250px;
+            align-self: flex-start;
+            width: 100%;
         }
 
         .skill-list {
@@ -124,36 +132,44 @@
         }
 
         .skill-item {
-            background-color: #ddd;
-            padding: 0.5rem;
+            display: flex;
             border-radius: 5px;
+            justify-content: space-between;
+        }
+
+        .education-section {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            height: 250px;
         }
 
         .education {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-            padding: 1rem;
-            height: 250px;
         }
 
         .education-list {
-            display: flex;
-            gap: 1rem;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+
         }
 
         .education-item {
-            /* padding: 0.5rem; */
-            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #000;
+            padding: 10px;
+            text-align: center;
         }
 
         .qualifications {
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
             height: 250px;
+            justify-content: center;
         }
 
         .qualification-list {
@@ -170,8 +186,8 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
             height: 250px;
+            justify-content: center;
         }
 
         .contact-list {
@@ -215,30 +231,42 @@
 
         <div class="div1">
             <div class="profile-photo">
-                <img src="https://assetsio.reedpopcdn.com/amspm-poster-cropped.jpg?width=1200&height=630&fit=crop&enable=upscale&auto=webp"
+                <img src="https://a.storyblok.com/f/191576/1200x800/a3640fdc4c/profile_picture_maker_before.webp"
                     alt="Profile Photo">
             </div>
             <div class="contacts">
-                <h2>Contact</h2>
+                <p class="font-medium font-bold">Contact</p>
                 <div class="contact-list">
-                    <div class="contact-item">{{email}}</div>
-                    <div class="contact-item">{{phone}}</div>
-                    <div class="contact-item">{{address}}</div>
+                    <div class="contact-item">
+                        <p class="font-small">{{email}}</p>
+                    </div>
+                    <div class="contact-item">
+                        <p class="font-small">{{phone}}
+                        </p>
+                    </div>
+                    <div class="contact-item">
+                        <p class="font-small">{{address}}</p>
+                    </div>
                 </div>
             </div>
             <div class="qualifications">
-                <h2>Achievements</h2>
+                <p class="font-medium font-bold">Achievements</p>
                 <div class="qualification-list">
                     {{#each achievements}}
-                    <div class="qualification-item">{{this}}</div>
+                    <div class="qualification-item">
+                        <p class="font-small">{{this}}
+                        </p>
+                    </div>
                     {{/each}}
                 </div>
             </div>
             <div class="education">
-                <h2>Education</h2>
+                <p class="font-medium font-bold">Education</p>
                 <div class="education-list">
                     {{#each edu}}
-                    <div class="education-item">{{this}}</div>
+                    <div class="education-item">
+                        <p class="font-small">{{this}}</p>
+                    </div>
                     {{/each}}
                 </div>
             </div>
