--- a/template/temp2.html
+++ b/template/temp2.html
@@ -5,18 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: "Titillium Web", sans-serif;
         }
 
         :root {
@@ -26,7 +19,6 @@
             --font-large: 2.5rem;
             --font-medium: 1.25rem;
             --font-small: 0.85rem;
-            --font-ex-small: 0.7rem;
             --font-bold: 700;
             --font-light: lighter;
         }
@@ -43,10 +35,6 @@
 
         .font-small {
             font-size: var(--font-small);
-        }
-
-        .font-ex-small {
-            font-size: var(--font-ex-small);
         }
 
         .font-bold {
@@ -209,9 +197,6 @@
         }
 
         .contact-item {
-            display: flex;
-            gap: 5px;
-            align-items: center;
             border-radius: 5px;
         }
 
@@ -235,52 +220,8 @@
             padding-top: 1rem;
         }
 
-        .work-about {
-            display: flex;
-            justify-content: space-between;
-        }
-
         .work-item {
             border-radius: 5px;
-        }
-
-        .titillium-web-light {
-            font-family: "Titillium Web", sans-serif;
-            font-weight: 300;
-            font-style: normal;
-        }
-
-        .titillium-web-regular {
-            font-family: "Titillium Web", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .titillium-web-semibold {
-            font-family: "Titillium Web", sans-serif;
-            font-weight: 600;
-            font-style: normal;
-        }
-
-        .titillium-web-bold {
-            font-family: "Titillium Web", sans-serif;
-            font-weight: 700;
-            font-style: normal;
-        }
-
-        .titillium-web-black {
-            font-family: "Titillium Web", sans-serif;
-            font-weight: 900;
-            font-style: normal;
-        }
-
-        .material-symbols-outlined {
-            font-variation-settings:
-                'FILL' 0,
-                'wght' 400,
-                'GRAD' 0,
-                'opsz' 24;
-            font-size: var(--font-small);
         }
     </style>
 </head>
@@ -290,30 +231,21 @@
 
         <div class="div1">
             <div class="profile-photo">
-                <img src="https://a.storyblok.com/f/191576/1200x800/a3640fdc4c/profile_picture_maker_before.webp"
+                <img src="https://assetsio.reedpopcdn.com/amspm-poster-cropped.jpg?width=1200&height=630&fit=crop&enable=upscale&auto=webp"
                     alt="Profile Photo">
             </div>
             <div class="white-div"></div>
             <div class="contacts">
                 <p class="font-medium font-bold">Contact</p>
-                <div class="contact-list font-ex-small">
+                <div class="contact-list">
                     <div class="contact-item">
-                        <span class="material-symbols-outlined">
-                            mail
-                        </span>
-                        <p>anjanirathore16@gmail.com</p>
+                        <p class="font-small">{{email}}</p>
                     </div>
                     <div class="contact-item">
-                        <span class="material-symbols-outlined">
-                            call
-                        </span>
-                        <p>09717599515</p>
+                        <p class="font-small">{{phone}}</p>
                     </div>
                     <div class="contact-item">
-                        <span class="material-symbols-outlined">
-                            home
-                        </span>
-                        <p>B -475 b Patel Nagar 2nd</p>
+                        <p class="font-small">{{address}}</p>
                     </div>
                 </div>
             </div>
@@ -322,91 +254,50 @@
             <div class="skills">
                 <p class="font-medium font-bold">Skills</p>
                 <div class="skill-list">
+                    {{#each skill}}
                     <div class="skill-item">
-                        <p class="font-small">React JS </p>
-                        <p class="font-small">Intermediate </p>
+                        <p class="font-small">{{this.skill}}</p>
+                        <p class="font-small">{{this.level}} </p>
                     </div>
-                    <div class="skill-item">
-                        <p class="font-small">Blockchain </p>
-                        <p class="font-small">Beginner </p>
-                    </div>
-                    <div class="skill-item">
-                        <p class="font-small">Node JS</p>
-                        <p class="font-small">Intermediate </p>
-                    </div>
+                    {{/each}}
                 </div>
             </div>
             <div class="white-div"></div>
             <div class="qualifications">
                 <p class="font-medium font-bold">Achievements</p>
                 <div class="qualification-list">
+                    {{#each achievements}}
                     <div class="qualification-item">
-                        <p class="font-small">5 star HacckerRanker in problem solving</p>
+                        <p class="font-small">
+                            {{this.name}}-{{this.event}}
+                        </p>
                     </div>
-                    <div class="qualification-item">
-                        <p class="font-small">Competed at more than 5 hackathons</p>
-                    </div>
-                    <div class="qualification-item">
-                        <p class="font-small">Solved 200 leetcode problems</p>
-                    </div>
-                </div>
+                    {{/each}}
             </div>
 
         </div>
         <div class="div2">
             <div class="font-large name">
-                <p>Aman Singh</p>
+                <p>{{name}}</p>
             </div>
             <div class="about">
                 <p class="font-medium font-bold">About me</p>
-                <p class=" font-ex-small">I am a passionate software developer with experience in various programming
-                    languages and frameworks.
-                    I enjoy problem-solving and always strive to write clean, efficient code. In my spare time, I like
-                    to keep up with the latest technology trends and work on personal projects to improve my skills.</p>
+                <p> {{about}} </p>
             </div>
             <div class="black-div"></div>
             <div class="work-history">
-                <p class="font-medium font-bold">Work History</p>
+                <h2>Work History</h2>
                 <div class="work-item">
                     <!-- <h3></h3>
                             <p></p>
                             <p></p> -->
-                    <div class="work-about titillium-web-semibold">
-                        <p>CEO at Google</p>
-                        <p>4 years</p>
-                    </div>
-                    <li class="titillium-web-regular font-ex-small">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        Obcaecati,
-                        quibusdam!</li>
-                    <li class="titillium-web-regular font-ex-small">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Voluptas
-                        provident
-                        facilis pariatur
-                        minus? Culpa, dicta.</li>
+                    <p>Worked as CEO at Google</p>
                 </div>
-                <div class="work-item ">
+                <div class="work-item">
                     <!-- <h3></h3>
                             <p></p>
                             <p></p> -->
-                    <div class="work-about titillium-web-semibold">
-                        <p>Software Enginner at Microsoft </p>
-                        <p>3 years</p>
-                    </div>
-                    <li class="titillium-web-regular font-ex-small">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        Obcaecati,
-                        quibusdam!</li>
-                    <li class="titillium-web-regular font-ex-small">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Voluptas
-                        provident
-                        facilis pariatur
-                        minus? Culpa, dicta.</li>
-                    <li class="titillium-web-regular font-ex-small">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Alias
-                        distinctio eum
-                        illum quod
-                        cupiditate odit dolorum natus! Vel, animi vitae?</li>
+                    <p>Owner of Microsoft </p>
                 </div>
                 <div class="work-item">
                     <!-- <h3></h3>
@@ -418,7 +309,7 @@
             </div>
             <div class="black-div"></div>
             <div class="education-section">
-                <p class="font-medium font-bold">Education</p>
+                <h2>Education</h2>
                 <div class="education">
                     <div class="education-list font-bold">
                         <div class="education-item">
@@ -437,44 +328,44 @@
                     </div>
                     <div class="education-list ">
                         <div class="education-item">
-                            <p class="font-ex-small">Class 10th</p>
+                            <p class="font-small">Class 10th</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">Ch. Chhabil Dass Public School</p>
+                            <p class="font-small">Ch. Chhabil Dass Public School</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">2021</p>
+                            <p class="font-small">2021</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">96%</p>
-                        </div>
-                    </div>
-                    <div class="education-list ">
-                        <div class="education-item">
-                            <p class="font-ex-small">Class 10th</p>
-                        </div>
-                        <div class="education-item">
-                            <p class="font-ex-small">Ch. Chhabil Dass Public School</p>
-                        </div>
-                        <div class="education-item">
-                            <p class="font-ex-small">2021</p>
-                        </div>
-                        <div class="education-item">
-                            <p class="font-ex-small">96%</p>
+                            <p class="font-small">96%</p>
                         </div>
                     </div>
                     <div class="education-list ">
                         <div class="education-item">
-                            <p class="font-ex-small">Class 10th</p>
+                            <p class="font-small">Class 10th</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">Ch. Chhabil Dass Public School</p>
+                            <p class="font-small">Ch. Chhabil Dass Public School</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">2021</p>
+                            <p class="font-small">2021</p>
                         </div>
                         <div class="education-item">
-                            <p class="font-ex-small">96%</p>
+                            <p class="font-small">96%</p>
+                        </div>
+                    </div>
+                    <div class="education-list ">
+                        <div class="education-item">
+                            <p class="font-small">Class 10th</p>
+                        </div>
+                        <div class="education-item">
+                            <p class="font-small">Ch. Chhabil Dass Public School</p>
+                        </div>
+                        <div class="education-item">
+                            <p class="font-small">2021</p>
+                        </div>
+                        <div class="education-item">
+                            <p class="font-small">96%</p>
                         </div>
                     </div>
                 </div>
@@ -483,11 +374,7 @@
 
         </div>
     </div>
-    <script>
-        Handlebars.registerHelper('renderLinks', (links) => {
 
-        });
-    </script>
 </body>
 
 </html>
