changed cors setup

--- a/template/temp1.html
+++ b/template/temp1.html
@@ -175,12 +175,12 @@
         </div>
 
         {{{check_edu_empty edu}}}
-        {{{check_course_empty course}}}
-        {{{check_work_empty work}}}
-        {{{check_work_empty projects}}}
+        {{{check_work_empty work 'Work Experience'}}}
+        {{{check_work_empty projects 'Projects / Internships'}}}
         {{{check_achievements_empty achievements}}}
         {{{check_skill_empty skill}}}
-
+        {{{check_course_empty course}}}
+        <div class="black-div"></div>
 
 
         <!-- <div class="">
